# cram-pepper

./: README.md  map-2017-11-ease-demo.pgm
cram_pepper_demo/: CMakeLists.txt  cram-pepper-demo.asd  package.xml
cram_pepper_demo/resource/: body.stl
cram_pepper_demo/src/: cram-plans.fasl  cram-plans.lisp  package.lisp  projection-demo.fasl  projection-demo.lisp  projection-demo.lisp~  setup.lisp  shelf-prolog.fasl  shelf-prolog.lisp
cram_pepper_description/: CMakeLists.txt  cram-pepper-description.asd  package.xml
cram_pepper_description/src/: arms.lisp  general-knowledge.lisp  neck.lisp  package.lisp
pepper_description/: CMakeLists.txt  package.xml
pepper_description/launch/: upload.launch
pepper_description/urdf/: pepper.urdf
